# ViCalc

./: .gitignore  LICENSE  README.md  ViCalc.iss  fix_uic_imports.py  pyproject.toml  vicalc.spec
docs/: help_formula.docx
help/: mkdocs.yml
help/docs/: basic_operations.md  calc_example.md  history.md  index.md  keys_general.md  memory.md  number_format.md  overview.md  percents.md  reciprocal.md  scientific.md  special.md  trigonometry.md  using.md
tests/: test_factorial.py  test_input_chars.py  test_mouse_pushbutton1.py  test_numpad.py  test_numpad_basic.py  test_scan_code.py
vicalc/: AboutDialog.py  AbsExpression.py  AdditionExpression.py  AngleUnit.py  AppGlobals.py  ArcCosExpression.py  ArcSinExpression.py  ArcTanExpression.py  ArcoshExpression.py  ArsinhExpression.py  ArtanhExpression.py  AwgToMm2Dialog.py  AwgToMm2Expression.py  BaseExpression.py  BinaryExpression.py  BracketExpression.py  CalcButton.py  CalcExpression.py  CalcOperations.py  CalcPrios.py  CalcTableWidget.py  CellValue.py  CombinationDialog.py  CombinationExpression.py  CommentCellValue.py  CommentDialog.py  ConvertFromBaseDialog.py  ConvertToBasesExpression.py  CosExpression.py  CoshExpression.py  CubeExpression.py  CubeRootExpression.py  DDExpression.py  DMSExpression.py  DMStoDD_Dialog.py  DegUnit.py  DegUnitProtocol.py  DivisionExpression.py  EPowerXExpression.py  FactorialExpression.py  (+72 more)
vicalc/ui/: CalcButton.py  CalcTableWidget.py  ClicableLabel.py  InputTextEdit.py  about_dialog.py  about_dialog.ui  awg_to_mm2_dialog.py  awg_to_mm2_dialog.ui  combination_dialog.py  dms_to_dd_dialog.py  (+34 more)
